	* Fix bug in maps containing complex types (Spotted by Tim Court <tim -dot- 
			court -at- venture3systems -dot- com>)
	* Fix signal handling bug in DBusDaemon (Spotted by Markus Gaebelein 
			<Markus -dot- Gaebelein -at- fiducia -dot- de>)
	* Make MessageReader/Writer use Buffered streams to try and improve
			performance
	* Support reading session bus address from file in $HOME

Version 2.6:

	* Add DBusConnection.releaseBusName API
	* Add DBusConnection.PeerSet for tracking peer lifetimes
	* Fix bug where DBusDaemon never sends NameOwnerChanged/NameLost
	  signals
	* Patches from Omair Majid <omajid -at- redhat -dot- com> to fix
	  DBusCall manpage and allow alternative docbook-to-man implementations.
	* Fix dependency on unix.jar even in tcp mode
	* Fix Path/ObjectPath cast issues (reported by Greg DeAngelis
	  <gdeangel -at- gmail -dot- com>)
	* Fix behavior when disconnected (spotted by Christopher 
	  Armstrong <carmstrong -at- fastmail -dot- com -dot- au>)

Version 2.5.1:

	* Fix for possible NPex in DBusDaemon
	* Add hexdump.jar to Class-Path for libdbus-java.jar
	* Add GetAll to properties interface (Patch from
	  Sveinung Kvilhaugsvik <sveinung84 -at- users -dot- sourceforge -dot- net>)
	* Make signals with renamed interfaces and member names work
	  if they are explicitly listened for (Partially fixes: #18257).
	  Also make the error reporting better when it doesn't work.
	* Add test for signal with renamed interface.
	* Fix clearing of string buffer during marshalling (Fixes: #17362)
	* Fix array marshalling bug (Fixes: #13291)

Version 2.5:

	* Patch from  Omair Majid <omajid -at- redhat -dot- com> to
	  have seperate javadoc installation directory
	* Patch from  Omair Majid <omajid -at- redhat -dot- com> to
	  have make all build the manpages.
	* ... but as serkan_kaba requested, also provide a bin target which doesn't
	* Fix returning DBusSerializables (Spotted by Johannes Felten
	  <johannesfelten -at- googlemail -dot- com>)